Huge updates to many areas of the site, most notable is the addition of a demo for the emulatorassembler. Will continue adding features until I am happy with it. Caching demo still needs to be implemented. Also changed styling of all buttons to include a small shrink.

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -37,3 +37,21 @@
     }
     */
 }
+
+@layer utilities
+{
+    @keyframes gradient-shift
+    {
+        0%, 100% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+    }
+
+    .animate-gradient
+    {
+        animation: gradient-shift 4s ease infinite;
+    }
+}
